# Ecomm-For-Automation-Testing

./: .env  .env.example  .gitignore  README.md  app.py  data_seeder.py  features.md  main.py  prompt.txt  pyproject.toml  requirements.txt  wsgi.py
Price-Change-Automation/: README.md  main.py  price_change_script.py  pyproject.toml
instance/: price_tracker.db
static/css/: style.css
static/js/: admin.js  main.js
templates/: admin.html  base.html  index.html  login.html  product_detail.html
