[project]
name = "price-tracker-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "sqlalchemy==2.0.23",
    "werkzeug==3.0.1",
    "argon2-cffi==23.1.0",
    "python-dotenv==1.0.0",
]
